--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       with:
         CNAME: www.sarapeekmonteen.dev
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BASE_BRANCH: master # The branch the action should deploy from.
-        BRANCH: gh-pages # The branch the action should deploy to.
+        BASE_BRANCH: gh-pages # The branch the action should deploy from.
+        BRANCH: master # The branch the action should deploy to.
         FOLDER: build # The folder the action should deploy.
         BUILD_SCRIPT: yarn && yarn build
